--- a/wp-content/themes/sutunam/scss/page/_product-category.scss
+++ b/wp-content/themes/sutunam/scss/page/_product-category.scss
@@ -92,8 +92,8 @@
     }
     .btn-close {
         background: none;
-        border: none;
-        color: $left-menu-bg;
+        border: 2px solid $black;
+        color: $black;
         font-size: 14px;
         height: 40px;
         line-height: 40px;
